fix the Css auto align

--- a/src/App.css
+++ b/src/App.css
@@ -20,70 +20,70 @@
 }
 
 .home {
-  background-color: #a37022;
+  background-color: #47cf73;
   background-image: url('./images/jear-logo1.png');
   background-position: center;
-  background-size: cover;
   background-repeat: no-repeat;
   color: #fff;
-  font-size: 100px;
-}
-
-@media only screen and (max-width: 1000px){
-	.home{
-		background-position: 80%
-	}
+  font-size: 100px auto;
+  background-size:100% auto;
 }
 
 .services {
-  background-image: url('./images/img-2.jpg');
+  background-color: #47cf73;
+  background-image: url('./images/jear-logo1.png');
   background-position: center;
-  background-size: cover;
   background-repeat: no-repeat;
   color: #fff;
-  font-size: 100px;
+  font-size: 100px auto;
+  background-size:100% auto;
 }
 
 .products {
-  background-image: url('./images/img-3.jpg');
+  background-color: #47cf73;
+  background-image: url('./images/jear-logo1.png');
   background-position: center;
-  background-size: fill;
   background-repeat: no-repeat;
   color: #fff;
-  font-size: 100px;
+  font-size: 100px auto;
+  background-size:100% auto;
 }
 
 .contact-us {
-  background-image: url('./images/img-4.jpg');
+  background-color: #47cf73;
+  background-image: url('./images/jear-logo1.png');
   background-position: center;
-  background-size: cover;
+  background-size:100% auto;
   background-repeat: no-repeat;
   color: #fff;
-  font-size: 100px;
+  font-size: 100px auto;
 }
 
 .sign-up {
-  background-image: url('./images/img-7.jpg');
+  background-color: #47cf73;
+  background-image: url('./images/jear-logo1.png');
   background-position: center;
-  background-size: cover;
+  background-size:100% auto;
   background-repeat: no-repeat;
   color: #fff;
   font-size: 100px;
 }
 
 .marketing {
-  background-image: url('./images/img-6.jpg');
+  background-color: #47cf73;
+  background-image: url('./images/jear-logo1.png');
   background-position: center;
-  background-size: cover;
+  background-size:100% auto;
   background-repeat: no-repeat;
   color: #fff;
-  font-size: 100px;
+  font-size: 100px auto;
 }
 
 .consulting {
-  background-image: url('./images/img-5.jpg');
+  background-color: #47cf73;
+  background-image: url('./images/jear-logo1.png');
   background-position: bottom;
-  background-size: cover;
+  background-size:100% auto;
   background-repeat: no-repeat;
   color: #fff;
   font-size: 100px;
